force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_2_Score__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_2_Score__c</fullName>
    <inlineHelpText>This should be the average for Quality 2F, Applicability, Objectives and Pitch.</inlineHelpText>
    <label>Facilitator 2 Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>