force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_Group__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Group__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Facilitator Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Facilitator</fullName>
            </value>
            <value>
                <fullName>1 Facilitator 1 QAer</fullName>
            </value>
            <value>
                <fullName>2 Facilitators</fullName>
            </value>
            <value>
                <fullName>2 Facilitators 1 QAer</fullName>
            </value>
            <value>
                <fullName>Self-guided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>