force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_QA_ed__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_QA_ed__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Facilitator QA&#39;ed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilitator 1</fullName>
            </value>
            <value>
                <fullName>Facilitator 2</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>