force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_QA_ed_Names__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_QA_ed_Names__c</fullName>
    <description>Copied from TL Event object</description>
    <formula>IF(ISPICKVAL( Facilitator_QA_ed__c, &#39;Facilitator 1&#39; ), Facilitator_1__r.FirstName + &#39; &#39; +Facilitator_1__r.LastName , IF(ISPICKVAL(Facilitator_QA_ed__c, &#39;Facilitator 2&#39;),

Facilitator_2__r.FirstName + &#39; &#39; + Facilitator_2__r.LastName ,


IF(ISPICKVAL( Facilitator_QA_ed__c, &#39;Both&#39;),

Facilitator_1__r.FirstName + &#39; &#39; +Facilitator_1__r.LastName +&#39; , &#39; + Facilitator_2__r.FirstName + &#39; &#39; + Facilitator_2__r.LastName ,


&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facilitator QA&#39;ed Names</label>
    <type>Text</type>
</CustomField>