force-app/main/default/objects/FLIP_Event__c/fields/Feedback_email_sent_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Feedback_email_sent_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback email sent to Partner</label>
    <type>Checkbox</type>
</CustomField>