force-app/main/default/objects/FLIP_Event__c/fields/Female_Facilitator_1__c.field-meta.xml
<CustomField>
    <fullName>Female_Facilitator_1__c</fullName>
    <formula>IF ( TEXT( Facilitator_1__r.Gender__c )==&#39;Female&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Female Facilitator 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>