force-app/main/default/objects/FLIP_Event__c/fields/FL_Fee__c.field-meta.xml
<CustomField>
    <fullName>FL_Fee__c</fullName>
    <inlineHelpText>How many premium credits should an FL pay to attend this event? A premium credit is worth £125. Please note that most events will be free for FLs. Please enter zero in this box unless you expect FLs to be charged.</inlineHelpText>
    <label>FL Fee</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>