force-app/main/default/objects/FLIP_Event__c/fields/Free_Room__c.field-meta.xml
<CustomField>
    <fullName>Free_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from TL Event object</description>
    <label>Free Room</label>
    <type>Checkbox</type>
</CustomField>