force-app/main/default/objects/FLIP_Event__c/fields/Gender_Fac_1__c.field-meta.xml
<CustomField>
    <fullName>Gender_Fac_1__c</fullName>
    <description>this is used in NPQ reports</description>
    <formula>TEXT(Facilitator_1__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender Fac 1</label>
    <type>Text</type>
</CustomField>