force-app/main/default/objects/FLIP_Event__c/fields/Hide_RSVP_List__c.field-meta.xml
<CustomField>
    <fullName>Hide_RSVP_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide RSVP List</label>
    <type>Checkbox</type>
</CustomField>