force-app/main/default/objects/FLIP_Event__c/fields/Invite_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Invite_Email_Message__c</fullName>
    <label>Invite Email Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>