force-app/main/default/objects/FLIP_Event__c/fields/Key_Faciliation__c.field-meta.xml
<CustomField>
    <fullName>Key_Faciliation__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Key Faciliation skills 1F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>