force-app/main/default/objects/FLIP_Event__c/fields/Key_Faciliation_skills_2F__c.field-meta.xml
<CustomField>
    <fullName>Key_Faciliation_skills_2F__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Key Faciliation skills 2F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>