force-app/main/default/objects/FLIP_Event__c/fields/KFS_Rating_1F__c.field-meta.xml
<CustomField>
    <fullName>KFS_Rating_1F__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>KFS Rating 1F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_10</valueSetName>
    </valueSet>
</CustomField>