force-app/main/default/objects/FLIP_Event__c/fields/Learning_Walk_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Learning_Walk_Feedback__c</fullName>
    <label>Learning Walk Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>