force-app/main/default/objects/FLIP_Event__c/fields/Learning_Walk_Status__c.field-meta.xml
<CustomField>
    <fullName>Learning_Walk_Status__c</fullName>
    <label>Learning Walk Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_QA__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>