force-app/main/default/objects/FLIP_Event__c/fields/Map_Location__c.field-meta.xml
<CustomField>
    <fullName>Map_Location__c</fullName>
    <description>Updated from TL Event</description>
    <formula>HYPERLINK(&quot;http://maps.google.co.in/maps?hl=en&amp;tab=wl&amp;q=&quot; &amp; Address_Line_1__c &amp; &#39; &#39;&amp; Address_Line_2__c &amp; &#39; &#39; &amp; &#39; &#39; &amp; Postal_Code__c, &quot;Google Map&quot;,&quot;_blank&quot;)</formula>
    <label>Map Location</label>
    <type>Text</type>
</CustomField>