force-app/main/default/objects/FLIP_Event__c/fields/Mission_values_1F__c.field-meta.xml
<CustomField>
    <fullName>Mission_values_1F__c</fullName>
    <description>Copied from TL Event</description>
    <label>Mission &amp; Values 1F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>