force-app/main/default/objects/FLIP_Event__c/fields/Mission_Values_2F__c.field-meta.xml
<CustomField>
    <fullName>Mission_Values_2F__c</fullName>
    <description>Copied from TL Events object</description>
    <label>Mission &amp; Values 2F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>