force-app/main/default/objects/FLIP_Event__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <formula>IF( OR(ISNULL(Cohort_lkp__c),ISBLANK(Cohort_lkp__c)),true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network</label>
    <type>Checkbox</type>
</CustomField>