force-app/main/default/objects/FLIP_Event__c/fields/Non_White_British__c.field-meta.xml
<CustomField>
    <fullName>Non_White_British__c</fullName>
    <description>Used in Tribal reporting as it defines all Ethnicity except White British.
This is not a BAME definition</description>
    <formula>IF(
AND
(
TEXT( Facilitator_1__r.Ethnic_Background__c )!=&#39;White British&#39;, 
TEXT( Facilitator_1__r.Ethnic_Background__c )!=&#39;&#39;) ,
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non White British</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>