force-app/main/default/objects/FLIP_Event__c/fields/Notification_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Emails_Sent__c</fullName>
    <label>Notification Emails Sent</label>
    <summaryFilterItems>
        <field>Attendees__c.Notification_Sent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendees__c.FLIP_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>