force-app/main/default/objects/FLIP_Event__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <inlineHelpText>Please enter a value from 0-10.</inlineHelpText>
    <label>Objectives</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>