force-app/main/default/objects/FLIP_Event__c/fields/of_Attendees_Providing_Feedback__c.field-meta.xml
<CustomField>
    <fullName>of_Attendees_Providing_Feedback__c</fullName>
    <formula>(Total_evaluations_returned__c )/ Total_Attended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Attendees Providing Feedback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>