force-app/main/default/objects/FLIP_Event__c/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from TL Event object</description>
    <label>Optional?</label>
    <type>Checkbox</type>
</CustomField>