force-app/main/default/objects/FLIP_Event__c/fields/Other_Hub__c.field-meta.xml
<CustomField>
    <fullName>Other_Hub__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Other Hub</label>
    <type>TextArea</type>
</CustomField>