force-app/main/default/objects/FLIP_Event__c/fields/Outcome_Facilitator_1__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Facilitator_1__c</fullName>
    <label>Outcome Facilitator 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met expectations</fullName>
            </value>
            <value>
                <fullName>Exceeded expectations</fullName>
            </value>
            <value>
                <fullName>Not met expectations</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>