force-app/main/default/objects/FLIP_Event__c/fields/Overall_score__c.field-meta.xml
<CustomField>
    <fullName>Overall_score__c</fullName>
    <inlineHelpText>This should be the average for Applicability, Logistics, Pitch, Objectives and Quality</inlineHelpText>
    <label>Overall score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>