force-app/main/default/objects/FLIP_Event__c/fields/Parent_Event__c.field-meta.xml
<CustomField>
    <fullName>Parent_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copied from TL Event object</description>
    <label>Parent Event</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Parent Event should have one of these Session Types- Residential, Induction, Super Saturday, Super Weekend, Day Conference, Learning Set, Peer Review,Evening Seminar.</errorMessage>
        <filterItems>
            <field>FLIP_Event__c.Event_Type__c</field>
            <operation>equals</operation>
            <value>Day Conference, Evening Seminar, Induction, Learning Set, Peer visit, Residential, Super Saturday, Super Weekend</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FLIP_Event__c</referenceTo>
    <relationshipLabel>Related Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>