force-app/main/default/objects/FLIP_Event__c/fields/Participation_Limit__c.field-meta.xml
<CustomField>
    <fullName>Participation_Limit__c</fullName>
    <inlineHelpText>Cap on the number of people allowed to RSVP &#39;Will attend&#39;. It will count on First Come First basis.</inlineHelpText>
    <label>Participation Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>