force-app/main/default/objects/FLIP_Event__c/fields/Personal_Qualities_1F__c.field-meta.xml
<CustomField>
    <fullName>Personal_Qualities_1F__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Personal Qualities 1F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>