force-app/main/default/objects/FLIP_Event__c/fields/Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>Picture_Id__c</fullName>
    <label>Picture Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>