force-app/main/default/objects/FLIP_Event__c/fields/Pitch__c.field-meta.xml
<CustomField>
    <fullName>Pitch__c</fullName>
    <inlineHelpText>Please enter a value from -5 to +5.</inlineHelpText>
    <label>Pitch</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>