force-app/main/default/objects/FLIP_Event__c/fields/PQ_Rating_2F__c.field-meta.xml
<CustomField>
    <fullName>PQ_Rating_2F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>PQ Rating 2F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_10</valueSetName>
    </valueSet>
</CustomField>