force-app/main/default/objects/FLIP_Event__c/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <inlineHelpText>Public : The event will be shown to all and anyone can apply for it.
Private: Only invited participants can see this event.</inlineHelpText>
    <label>Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>