force-app/main/default/objects/FLIP_Event__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <formula>Cohort_lkp__r.Programme_Definition__r.Programme__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme</label>
    <type>Text</type>
</CustomField>