force-app/main/default/objects/FLIP_Event__c/fields/Programme_Type__c.field-meta.xml
<CustomField>
    <fullName>Programme_Type__c</fullName>
    <description>Copied from TL Events object</description>
    <label>Programme Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teaching Leaders TLIF</fullName>
            </value>
            <value>
                <fullName>TL HPML Pri Foundation</fullName>
            </value>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>MLP</fullName>
            </value>
            <value>
                <fullName>TL HPML Pri Mastery</fullName>
            </value>
            <value>
                <fullName>TL HMPL Sec</fullName>
            </value>
            <value>
                <fullName>Fellows</fullName>
                <isActive>false</isActive>
                <label>Fellows</label>
            </value>
            <value>
                <fullName>Primary</fullName>
                <isActive>false</isActive>
                <label>Primary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>