force-app/main/default/objects/FLIP_Event__c/fields/QA_er__c.field-meta.xml
<CustomField>
    <fullName>QA_er__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copied from TL Event object</description>
    <label>QA&#39;er</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Facilitator__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.QA_er__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (QA&#39;er)</relationshipLabel>
    <relationshipName>Events_QA_2</relationshipName>
    <type>Lookup</type>
</CustomField>