force-app/main/default/objects/FLIP_Event__c/fields/QA_er_Email__c.field-meta.xml
<CustomField>
    <fullName>QA_er_Email__c</fullName>
    <description>Copied from TL Event object</description>
    <label>QA&#39;er Email</label>
    <type>Email</type>
</CustomField>