force-app/main/default/objects/FLIP_Event__c/fields/QA_er_Name__c.field-meta.xml
<CustomField>
    <fullName>QA_er_Name__c</fullName>
    <description>Copied from TL Event object</description>
    <formula>QA_er__r.FirstName + &quot; &quot; + QA_er__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA er Name</label>
    <type>Text</type>
</CustomField>