force-app/main/default/objects/FLIP_Event__c/fields/QA_Report_2F_URL__c.field-meta.xml
<CustomField>
    <fullName>QA_Report_2F_URL__c</fullName>
    <description>Copied from TL Event object</description>
    <label>QA Report 2F URL</label>
    <type>TextArea</type>
</CustomField>