force-app/main/default/objects/FLIP_Event__c/fields/QA_Report_Status_1F__c.field-meta.xml
<CustomField>
    <fullName>QA_Report_Status_1F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>QA Report Status 1F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>