force-app/main/default/objects/FLIP_Event__c/fields/QA_Score_2F__c.field-meta.xml
<CustomField>
    <fullName>QA_Score_2F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>QA Score 2F</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>