force-app/main/default/objects/FLIP_Event__c/fields/Quality_2F__c.field-meta.xml
<CustomField>
    <fullName>Quality_2F__c</fullName>
    <inlineHelpText>Please enter a value from 0-10</inlineHelpText>
    <label>Quality 2F</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>