force-app/main/default/objects/FLIP_Event__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <inlineHelpText>This should be the average for Quality 1F and Quality 2F.</inlineHelpText>
    <label>Quality</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>