force-app/main/default/objects/FLIP_Event__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <description>Copied from TL Event objects</description>
    <label>Quality Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>