force-app/main/default/objects/FLIP_Event__c/fields/Recommend_a_colleague__c.field-meta.xml
<CustomField>
    <fullName>Recommend_a_colleague__c</fullName>
    <inlineHelpText>%, end of programme only</inlineHelpText>
    <label>Recommend a colleague</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>