force-app/main/default/objects/FLIP_Event__c/fields/Relevance_of_content__c.field-meta.xml
<CustomField>
    <fullName>Relevance_of_content__c</fullName>
    <inlineHelpText>Out of 10</inlineHelpText>
    <label>Relevance of content</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>