force-app/main/default/objects/FLIP_Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <formula>Participation_Limit__c  -  Total_FP_Attendee__c</formula>
    <inlineHelpText>Participation Limit (minus) Confirmed Attendee</inlineHelpText>
    <label>Available Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>