force-app/main/default/objects/FLIP_Event__c/fields/Role_2F__c.field-meta.xml
<CustomField>
    <fullName>Role_2F__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Role 2F</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-Facilitator</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>