force-app/main/default/objects/FLIP_Event__c/fields/Send_to_LMS__c.field-meta.xml
<CustomField>
    <fullName>Send_to_LMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Canvas</label>
    <type>Checkbox</type>
</CustomField>