force-app/main/default/objects/FLIP_Event__c/fields/Send_to_My_Ambition__c.field-meta.xml
<CustomField>
    <fullName>Send_to_My_Ambition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to My Ambition</label>
    <type>Checkbox</type>
</CustomField>