force-app/main/default/objects/FLIP_Event__c/fields/Sent_catch_up_materials__c.field-meta.xml
<CustomField>
    <fullName>Sent_catch_up_materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent catch up materials</label>
    <type>Checkbox</type>
</CustomField>