force-app/main/default/objects/FLIP_Event__c/fields/Serving_School_Leader_Fac1__c.field-meta.xml
<CustomField>
    <fullName>Serving_School_Leader_Fac1__c</fullName>
    <description>this in used in NPQ reports</description>
    <formula>Facilitator_1__r.Serving_School_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serving School Leader Fac1</label>
    <type>Checkbox</type>
</CustomField>